<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:text="@string/category_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_ProductSKU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtProductName"
        android:layout_marginTop="16dp"
        android:text="SKU#"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_ProductSKU"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_ProductSKU"
        android:layout_alignBottom="@+id/txt_ProductSKU"
        android:layout_toRightOf="@+id/txtProductName"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_ProductName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_ProductSKU"
        android:layout_alignTop="@+id/txtProductName" />

    <TextView
        android:id="@+id/txt_ProductDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_ProductName"
        android:text="@string/category_desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_ProductDescription"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/txtProductName"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/cmb_ProductSubCategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:layout_toRightOf="@+id/txtProductName"
        android:prompt="@layout/product_details" />

    <TextView
        android:id="@+id/txt_ProductCateogry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:text="Category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cmb_ProductSubCategory"
        android:layout_below="@+id/txt_ProductCateogry" />

    <TextView
        android:id="@+id/txt_ProductSubCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Spinner01"
        android:text="Sub Category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_ProductSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btn_save" />

</RelativeLayout>